Fix title overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ footer a:hover {
         width: 50%;
     }
     #devName{
-        margin-top: 7%;
+        margin-top: 10%;
     }
 }
 
